force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/leaseworks__Reconciliation_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Reconciliation Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reconciliation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>