force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Assumed_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Ratio__c</fullName>
    <description>Assumed FH:FC for the selected Supplemental Rent.</description>
    <inlineHelpText>Assumed FH:FC for the selected Supplemental Rent.</inlineHelpText>
    <label>_Assumed Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>