force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Excess_Amount__c</fullName>
    <description>Calculated Excess Amount after Reconciling with Type- Excess Utilization., for the selected Supplemental Rent.</description>
    <inlineHelpText>Calculated Excess Amount after Reconciling with Type- Excess Utilization., for the selected Supplemental Rent.</inlineHelpText>
    <label>_Excess Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>