force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Excess_Rate_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Excess_Rate_F__c</fullName>
    <description>Contractual rate for excess utilization for the component.</description>
    <formula>leaseworks__Excess_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contractual rate for excess utilization for the component.</inlineHelpText>
    <label>Excess Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>