force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Excess_Usage_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Excess_Usage_Limit__c</fullName>
    <description>Maximum utilization of the component as agreed on lease.</description>
    <inlineHelpText>Maximum utilization of the component as agreed on lease.</inlineHelpText>
    <label>_Excess Usage Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>