force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__From_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__From_Date__c</fullName>
    <description>Start Date of the reconciliation period.</description>
    <formula>leaseworks__Reconciliation_Schedule__r.leaseworks__From_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start Date of the reconciliation period.</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>