force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Ratio_Variance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Variance__c</fullName>
    <description>FH:FC ratio difference between Actual and Assumed utilization for the period.</description>
    <inlineHelpText>FH:FC ratio difference between Actual and Assumed utilization for the period.</inlineHelpText>
    <label>_Ratio Difference (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>