force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Reconciliation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Schedule__c</fullName>
    <label>Reconciliation Schedule</label>
    <referenceTo>leaseworks__Reconciliation_Schedule__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>Reconciliation_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>