force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Supplemental_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Selected Supplemental Rent record for reconciliation.</description>
    <inlineHelpText>Selected Supplemental Rent record for reconciliation.</inlineHelpText>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>Reconciliation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>