force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__To_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__To_Date__c</fullName>
    <description>Start Date of the reconciliation period.</description>
    <formula>leaseworks__Reconciliation_Schedule__r.leaseworks__To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start Date of the reconciliation period.</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>