force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Total_Assumed_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Assumed_MR__c</fullName>
    <label>_Total Assumed MR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>