force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Total_FH_for_the_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_FH_for_the_Period__c</fullName>
    <label>_Total FH for the Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>