force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/fields/leaseworks__Total_FH_for_the_Period_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_FH_for_the_Period_F__c</fullName>
    <description>Total Flight Hours for the Period.</description>
    <formula>leaseworks__Total_FH_for_the_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Flight Hours for the Period.</inlineHelpText>
    <label>Total FH for the Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>