force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/recordTypes/leaseworks__Assumed_FH_and_FC.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Assumed_FH_and_FC</fullName>
    <active>true</active>
    <label>Assumed FH and FC</label>
</RecordType>