force-app/main/default/objects/leaseworks__Reconciliation_Line_Item__c/recordTypes/leaseworks__Assumed_Ratio.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Assumed_Ratio</fullName>
    <active>true</active>
    <label>Assumed Ratio</label>
</RecordType>